tests/negative/deprecation-lib.toit
// Copyright (C) 2024 Toitware ApS.
// Use of this source code is governed by a Zero-Clause BSD license that can
// be found in the tests/LICENSE file.

/**
A library that is deprecated.

Deprecated. For testing.
*/

foo:
